--- a/app/src/main/res/navigation/product_nav_graph.xml
+++ b/app/src/main/res/navigation/product_nav_graph.xml
@@ -37,8 +37,7 @@
         <action
             android:id="@+id/action_phoneAuthFragment_to_productFragment"
             app:destination="@id/productFragment"
-            app:popUpTo="@id/productFragment"
-            app:popUpToInclusive="true" />
+            app:popUpTo="@id/phoneAuthFragment" />
     </fragment>
     <fragment
         android:id="@+id/verifyOtpFragment"
@@ -48,8 +47,7 @@
         <action
             android:id="@+id/action_verifyOtpFragment_to_productFragment"
             app:destination="@id/productFragment"
-            app:popUpTo="@id/productFragment"
-            app:popUpToInclusive="true" />
+            app:popUpTo="@id/verifyOtpFragment" />
         <argument
             android:name="phone"
             app:argType="string" />
