--- a/app/src/main/res/navigation/profile_nav_graph.xml
+++ b/app/src/main/res/navigation/profile_nav_graph.xml
@@ -9,14 +9,5 @@
         android:id="@+id/profileFragment"
         android:name="com.example.e_commerce.ui.fragments.profile.ProfileFragment"
         android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" >
-        <action
-            android:id="@+id/action_profileFragment_to_phoneAuthFragment2"
-            app:destination="@id/phoneAuthFragment2" />
-    </fragment>
-    <fragment
-        android:id="@+id/phoneAuthFragment2"
-        android:name="com.example.e_commerce.ui.fragments.product.PhoneAuthFragment"
-        android:label="fragment_phone_auth"
-        tools:layout="@layout/fragment_phone_auth" />
+        tools:layout="@layout/fragment_profile" />
 </navigation>
